# Structure-PLP-SLAM

./: .gitignore  CMakeLists.txt  cmake_install.cmake  gcc13_fix.h
example/: CMakeLists.txt  run_tum_rgbd_slam_with_line.cc
example/replica/: Replica_mono.yaml  Replica_rgbd.yaml  Replica_rgbd_gt.yaml
scripts/: line_map_consumer.py
src/PLPSLAM/: CMakeLists.txt  mapping_module.cc  tracking_module.cc
src/PLPSLAM/feature/: line_extractor.cc  line_extractor.h
src/PLPSLAM/optimize/: global_bundle_adjuster.cc  graph_optimizer.cc  local_bundle_adjuster.cc  local_bundle_adjuster_extended_line.cc  local_bundle_adjuster_extended_plane.cc  pose_optimizer.cc  pose_optimizer_extended_line.cc  transform_optimizer.cc
src/PLPSLAM/optimize/g2o/: Plane3D.h  landmark_vertex_line3d.h  line3d.cc  line3d.h
src/PLPSLAM/optimize/g2o/se3/: perspective_pose_opt_edge.h  pose_opt_edge_line3d_orthonormal.h  shot_vertex.h
src/PLPSLAM/optimize/g2o/sim3/: shot_vertex.h  transform_vertex.h
src/PLPSLAM/publish/: CMakeLists.txt  frame_publisher.cc  line_zmq_publisher.cc  line_zmq_publisher.h
